Fixed overflow issue caused by before states of image animations.

--- a/style.css
+++ b/style.css
@@ -222,3 +222,7 @@
     transform: none !important;
   }
 } */
+
+
+/* Overflow fix */
+html, body { overflow-x: hidden; }
